# ProtoTest

./: README  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/segway/prototest/: MainActivity.java  ProtoApplication.java  XJni.java
app/src/main/java/com/segway/prototest/entry/: ComplexEntry.java  NestedEntry.java  Person.java  SimpleIntEntry.java
app/src/main/java/com/segway/prototest/presenter/: TestPresenter.java
app/src/main/java/com/segway/prototest/test/: ITestCallback.java  JacksonTest.java  ObjectTest.java  ProtoBufTest.java  TestResult.java
app/src/main/java/com/segway/prototest/util/: CachedExecutorService.java  ExecutableTask.java  JvmUtils.java  TaskTimerUtil.java  TestUtils.java
app/src/main/java/com/segway/prototest/view/: IProtoContact.java  MainActivity.java
app/src/main/jni/: NestedEntry.pb.cc  NestedEntry.pb.h  Person.pb.cc  Person.pb.h  xjni.cpp
app/src/main/proto/: ComplexEntry.proto  IntEntry.proto  IntsEntry.proto  NestedEntry.proto  Person.proto  StringEntry.proto
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
common/: build.gradle
common/src/androidTest/java/com/segway/common/: ExampleInstrumentedTest.java
common/src/main/: AndroidManifest.xml
common/src/main/proto/: Rom.proto  Student.proto
gradle/wrapper/: gradle-wrapper.properties
protoserver/: build.gradle
protoserver/src/main/: AndroidManifest.xml
protoserver/src/main/res/layout/: activity_main.xml
protoserver/src/main/res/values/: strings.xml
(+8 files in other folders)
